--- a/views/food-entries/food-results.ejs
+++ b/views/food-entries/food-results.ejs
@@ -1,6 +1,3 @@
-<%include ../partials/boilerplate.ejs >
-	<% for (let result of data) { %
-		<h1><%=result.item_name%></h1>
-	<% } %>
-
-<%include ../partials/end.ejs >
+<% for (let result of data) { %>
+	<h1><%= result.item_name %></h1>
+<% } %>
