added date functionality

--- a/views/food-entries/food-index.ejs
+++ b/views/food-entries/food-index.ejs
@@ -7,6 +7,7 @@
 			<h2><%= food.time %></h2>
 			<h1><%= food.name %></h1>
 			<h2><%= food.cals %> calories</h2>
+			<a href='/food/<%=food.id%>'>details</a>
 		</div>
 	<% } %>
 
