--- a/views/food-entries/food-single.ejs
+++ b/views/food-entries/food-single.ejs
@@ -6,5 +6,10 @@
 	<p><%= data.details %></p>
 
 	<a href='/food'>Back</a>
+	<a href='/food/<%=data.id%>/edit'>Edit</a>
+	
+	<form method='POST' action='/food/<%=data.id%>?_method=delete'>
+		<input type='submit' value='Delete' />
+	</form>
 
 <% include ../partials/end %>
