--- a/views/food-entries/food-results.ejs
+++ b/views/food-entries/food-results.ejs
@@ -1,3 +1,7 @@
+<% include ../partials/boilerplate %>
+
 <% for (let result of data) { %>
-	<h1><%= result.item_name %></h1>
+	<h1><%= result.fields.item_name %></h1>
 <% } %>
+
+<% include ../partials/end %>
