--- a/views/food-entries/food-index.ejs
+++ b/views/food-entries/food-index.ejs
@@ -11,7 +11,11 @@
 		</div>
 	<% } %>
 
-	<div class='add-entry'>
+	<div class='entry'>
+		<h2>Total Calories: <%= totalCals%></h2>
+	</div>
+
+	<div class='entry'>
 		<a href='/food/add'>add item</a>
 	</div>
 
