--- a/views/partials/boilerplate.ejs
+++ b/views/partials/boilerplate.ejs
@@ -4,8 +4,9 @@
   <meta charset='UTF-8' />
   <meta name='viewport' content='width=device-width, initial-scale=1.0' />
   <meta http-equiv='X-UA-Compatible' content='ie=edge' />
-  <title>Food Diary</title>
-  <link href="/styles/reset.css" rel="stylesheet" type="text/css">
-  <link href="/styles/style.css" rel="stylesheet" type="text/css">
+  <title>Food Diary</title> <!--
+  <link href="/styles/reset.css" rel="stylesheet" type="text/css">-->
+  <link href="/styles/style.css" rel="stylesheet" type="text/css"> 
 </head>
 <body>
+<% include ./nav %>
