creating archive route

--- a/views/partials/boilerplate.ejs
+++ b/views/partials/boilerplate.ejs
@@ -7,6 +7,9 @@
   <title>Food Diary</title> <!--
   <link href="/styles/reset.css" rel="stylesheet" type="text/css">-->
   <link href="/styles/style.css" rel="stylesheet" type="text/css"> 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://d3js.org/d3.v4.min.js"></script>
+
 </head>
 <body>
 <% include ./nav %>
