--- a/views/food-entries/food-results.ejs
+++ b/views/food-entries/food-results.ejs
@@ -1,12 +1,14 @@
 <% include ../partials/boilerplate %>
 
 <a href='/food/add'>back</a>
-<% for (let result of data) { %>
-	<div class='entry'>
-		<h2><%= result.fields.item_name %></h2>
-		<h3><%= Math.round(result.fields.nf_calories) %> Calories</h3>
-		<h4><%= result.fields.brand_name %> </h4>
-	</div>
-<% } %>
+<form method='POST' action='/food/add'>
+	<span>item</span>
+	<select>
+	<% var results = data %>
+	<% for (let result of data) { %>
+		<option value='<%= result.id%>'><%= result.fields.item_name %> <%= result.fields.brand_name %></option>
+		<% } %>
+	</select>
+
 
 <% include ../partials/end %>
