--- a/views/auth/profile.ejs
+++ b/views/auth/profile.ejs
@@ -1,6 +1,10 @@
 <% include ../partials/boilerplate %>
 
-<h1><%=user.username%></h1>
-<h2><%=user.firstname%> <%=user.lastname%></h2>
-<h3><%=user.email%></h3>
+<%  %>
+<div class='profile'>
+	<h1 id='username'><%=user.username%></h1>
+	<h2 id='fullname'><%=user.firstname%> <%=user.lastname%></h2>
+	<h3 id='email'><%=user.email%></h3>
+</div>
+
 <% include ../partials/end %>
