--- a/views/partials/boilerplate.ejs
+++ b/views/partials/boilerplate.ejs
@@ -4,8 +4,10 @@
   <meta charset='UTF-8' />
   <meta name='viewport' content='width=device-width, initial-scale=1.0' />
   <meta http-equiv='X-UA-Compatible' content='ie=edge' />
-  <title>Food Diary</title> <!--
-  <link href="/styles/reset.css" rel="stylesheet" type="text/css">-->
+  <title>Food Diary</title> 
+  <script src="https://use.fontawesome.com/c237e30b0b.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
+  <link href="/styles/reset.css" rel="stylesheet" type="text/css">
   <link href="/styles/style.css" rel="stylesheet" type="text/css"> 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://d3js.org/d3.v4.min.js"></script>
