--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,9 +1,16 @@
 <nav>
 <ul>
-	<li><a href='/food'>Home</a></li>
-	<li><a href='/'>Archive</a></li>
-	<li><a href='/'>Stats</a></li>
-	<li><a href='/user'>Profile</a></li>
+	<li id='home'><a href='/food'>Food</a></li>
+	<li id='archive'><a href='/'>Archive</a></li>
+	<li id='stats'><a href='/'>Stats</a></li>
+
+	<% if (currentPage === 'profile') { %>
+		<li id='profile' class='current-page'><a href='/user'>Profile</a></li>
+	<% } else { %>
+		<li id='profile'><a href='/user'>Profile</a></li>
+	<% } %>
+	
+
 	<li><a href='/auth/logout'>Log Out</a></li>
 
 </ul>
