--- a/views/archive/day-single.ejs
+++ b/views/archive/day-single.ejs
@@ -1,21 +1,29 @@
 <% include ../partials/boilerplate %>
 	
-	<h1><%= date %></h1>
+	<h1 class='date-header'><%= date %></h1>
+
+	<div class='headers entry'>
+		<h2 class='time-col'>Time</h2>
+		<h2 class='name-col'>Item</h2>
+		<h2 class='cals-col'>Calories</h2>
+		<h2></h2>
+	</div>
 
 	<% for (let food of data) { %>
 		<div class='entry'>
-			<h2><%= food.time %></h2>
-			<h1><%= food.name %></h1>
-			<h2><%= food.cals %> calories</h2>
+			<h2 class='time-col'><%= food.time %></h2>
+			<h2 class='name-col'><%= food.name %></h1>
+			<h2 class='cals-col'><%= food.cals %> calories</h2>
+			<a class ='details-col' href='/food/<%=food.id%>'><i class="fa fa-arrow-circle-right fa-2x" aria-hidden="true"></i>
+</a>
 		</div>
 	<% } %>
 
-	<div class='entry'>
-		<h2>Total Calories: <%= totalCals%></h2>
-	</div>
-
-	<div class='entry'>
-		<a href='/food/add'>add item</a>
+	<div class='entry' id='total-cals'>
+		<h2 class='time-col'>Total</h2>
+		<h2 class='name-col'>meals</h2>
+		<h2 class='cals-col'><%= totalCals%> Calories</h2>
+		<h2></h2>
 	</div>
 
 <% include ../partials/end %>
