--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,9 +1,11 @@
 <% include ../partials/boilerplate %>
-
-	<form method='POST' action='/auth/login'>
-		<input name='username' type='text' placeholder='username' required />
-		<input name='password' type='password' placeholder='password' required />
-		<input type='submit' value='Log in' />
-	</form>
+	
+	<div class='auth-div'>
+		<form method='POST' action='/auth/login'>
+			<input name='username' type='text' placeholder='username' required />
+			<input name='password' type='password' placeholder='password' required />
+			<input type='submit' value='Log in' class='button'/>
+		</form>
+	</div>
 
 <% include ../partials/end %>
