got monthly stats working

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -2,7 +2,7 @@
 <ul>
 	<li id='home'><a href='/food'>Food</a></li>
 	<li id='archive'><a href='/'>Archive</a></li>
-	<li id='stats'><a href='/'>Stats</a></li>
+	<li id='stats'><a href='/stats'>Stats</a></li>
 
 	<% if (currentPage === 'profile') { %>
 		<li id='profile' class='current-page'><a href='/user'>Profile</a></li>
