--- a/views/food-entries/food-single.ejs
+++ b/views/food-entries/food-single.ejs
@@ -1,15 +1,24 @@
 <% include ../partials/boilerplate %>
-
-	<h1><%= data.name %></h1>
-	<h3><%= data.time %></h3>
-	<h3><%= data.cals %> Calories</h3>
-	<p><%= data.details %></p>
-
-	<a href='/food'>Back</a>
-	<a href='/food/<%=data.id%>/edit'>Edit</a>
 	
-	<form method='POST' action='/food/<%=data.id%>?_method=delete'>
-		<input type='submit' value='Delete' />
-	</form>
+	<a href='/food' class='back'>
+		<i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
+	</a>
+
+	<div class='single-div'>
+		<h1><%= data.name %></h1>
+		<h3><%= data.time %></h3>
+		<h3><%= data.cals %> Calories</h3>
+		<h3><%= data.details %></h3>
+	
+
+	<div class='edit-div'>
+		<a href='/food/<%=data.id%>/edit' class='button'>Edit</a>
+		
+		<form method='POST' action='/food/<%=data.id%>?_method=delete'>
+			<input type='submit' value='Delete' />
+		</form>
+	</div>
+
+	</div>
 
 <% include ../partials/end %>
