working on archive controller

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -102,6 +102,15 @@ input[type=submit]:hover {
 	box-sizing: border-box;
  }
 
+
+
+.home-div {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 100px;
+}
+
  .button:hover {
  	background-color: #13CAD5;
 	border: none;
@@ -118,8 +127,8 @@ input[type=submit]:hover {
  	display: flex;
  	flex-direction: column;
  	margin: 50px 20%;
- 	border-radius: 5px;
- 	border: 2px solid #13CAD5;
+ 	border-radius: 15px;
+ 	color: white;
  }
 
 input:-webkit-autofill,
@@ -182,7 +191,12 @@ form {
 	text-align: center;
 }
 
-
+.welcome {
+	font-size: 80px;
+	background: -webkit-linear-gradient(#0E94A1 , #13CAD5); 
+	-webkit-background-clip: text;
+  	-webkit-text-fill-color: transparent;
+}
 
 .time-col, .name-col, .cals-col,.details-col {
 	position: absolute;
@@ -285,10 +299,22 @@ select {
 }
 
 .single-div h3  {
-	color: #0E94A1;
 	font-size: 20px;
 	text-align: center;
 	margin: 10px;
 }
 
+.single-div h1 {
+	color:  #223647;	
+}
+
+.single-div .button {
+	background-color:  #223647;
+}
+
+
+.single-div .button:hover {
+	background-color:  #223647;
+	color:  #13CAD5;
+}
 
