--- a/views/food-entries/food-single.ejs
+++ b/views/food-entries/food-single.ejs
@@ -4,7 +4,7 @@
 		<i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
 	</a>
 
-	<div class='single-div'>
+	<div class='single-div entry'>
 		<h1><%= data.name %></h1>
 		<h3><%= data.time %></h3>
 		<h3><%= data.cals %> Calories</h3>
@@ -15,7 +15,7 @@
 		<a href='/food/<%=data.id%>/edit' class='button'>Edit</a>
 		
 		<form method='POST' action='/food/<%=data.id%>?_method=delete'>
-			<input type='submit' value='Delete' />
+			<input class='button' type='submit' value='Delete' />
 		</form>
 	</div>
 
