--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,7 @@
 <% include ./partials/boilerplate %>
-	<a href='/auth/login'>Log In</a>
-	<a href='/auth/register'>Register</a>
+	<h1 class='welcome'>welcome.</h1>
+	<div class='home-div'>
+		<a href='/auth/login' class='button'>Log In</a>
+		<a href='/auth/register' class='button'>Register</a>
+	</div>
 <% include ./partials/end %>
