--- a/views/stats/month-table.ejs
+++ b/views/stats/month-table.ejs
@@ -32,6 +32,13 @@ console.log(typeof dates);
 				padding: 100
 			},
 			maintainAspectRatio: false,
+			scales: {
+            	yAxes: [{
+                	ticks: {
+                    	beginAtZero:true
+                	}
+           	 	}]
+        	}
 		}
 	});
 </script>
